--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <body>
-<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+<canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;">
 Your browser does not support the HTML canvas tag.
 </canvas>
 <script>
   var c = document.getElementById("myCanvas");
   var ctx = c.getContext("2d");
-  ctx.moveTo(0, 0);
-  ctx.lineTo(200, 100);
+  ctx.moveTo(300, 300);
+  ctx.lineTo(400, 300);
+  ctx.stroke();
+  
+  ctx.moveTo(400, 300);
+  ctx.lineTo(350, 214);
+  ctx.stroke();
+  
+  ctx.moveTo(350, 214);
+  ctx.lineTo(300, 300);
   ctx.stroke();
 </script> 
 </body>
