--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ Your browser does not support the HTML canvas tag.
   ctx.moveTo(350, 214);
   ctx.lineTo(300, 300);
   ctx.stroke();
+  
+ ctx.beginPath();
+ ctx.arc(350, 271, 58, 0, 2 * Math.PI);
+ ctx.stroke();
 </script> 
 </body>
 </html>
