--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="main.css">
+</head>
 <body>
 <canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;">
 Your browser does not support the HTML canvas tag.
