--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;">
+<canvas id="myCanvas" width="1920" height="1080">
 Your browser does not support the HTML canvas tag.
 </canvas>
 <script>
