--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<link rel="stylesheet" href="main.css">
-</head>
-<body>
-<canvas id="myCanvas" width="1700" height="900">
-Your browser does not support the HTML canvas tag.
-</canvas>
-<script>
-  var c = document.getElementById("myCanvas");
-  var ctx = c.getContext("2d");
-  ctx.moveTo(500, 500);
-  ctx.lineTo(800, 500);
-  ctx.stroke();
-  
-  ctx.moveTo(800, 500);
-  ctx.lineTo(650, 241);
-  ctx.stroke();
-  
-  ctx.moveTo(650, 241);
-  ctx.lineTo(500, 500);
-  ctx.stroke();
-  
- ctx.beginPath();
- ctx.arc(650, 414, 173, 0, 2 * Math.PI);
- ctx.stroke();
-</script> 
-</body>
+  <head>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <canvas id="myCanvas" width="1700" height="900">
+      Your browser does not support the HTML canvas tag.
+    </canvas>
+    <script>
+      var c = document.getElementById("myCanvas");
+      var ctx = c.getContext("2d");
+
+      ctx.lineWidth = 5;
+      ctx.strokeStyle = "#FFD700";
+      
+      ctx.moveTo(500, 500);
+      ctx.lineTo(800, 500);
+      ctx.stroke();
+
+      ctx.moveTo(800, 500);
+      ctx.lineTo(650, 241);
+      ctx.stroke();
+
+      ctx.moveTo(650, 241);
+      ctx.lineTo(500, 500);
+      ctx.stroke();
+
+      ctx.beginPath();
+      ctx.arc(650, 414, 173, 0, 2 * Math.PI);
+      ctx.stroke();
+    </script>
+  </body>
 </html>
