--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="main.css" />
+    <title>Kiwi Vector Visualizer</title>
   </head>
   <body>
     <canvas id="myCanvas" width="1700" height="900">
