--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <p class="content"></p>
 
+    <!--Draws the robot-->
     <script>
       var c = document.getElementById("myCanvas");
       var ctx = c.getContext("2d");
@@ -36,7 +37,7 @@
       ctx.arc(650, 414, 173, 0, 2 * Math.PI);
       ctx.stroke();
     </script>
-
+    <!--Reads contents of csv-->
     <script>
       function previewFile() {
         const content = document.querySelector(".content");
