--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kiwi Vector Visualizer</title>
   </head>
   <body>
-    <canvas id="myCanvas" width="1700" height="900">
+    <canvas id="myCanvas" width="1000" height="800">
       Your browser does not support the HTML canvas tag.
     </canvas>
 
@@ -78,6 +78,15 @@
           }
         });
       }
+    </script>
+      <!--moves the canvas-->
+      <script type="text/javascript">
+
+        var main = document.getElementById("myCanvas");
+        var render = main.getContext("2d");
+        main.style.left = "400px";
+        main.style.top = "100px";
+        main.style.position = "absolute";
     </script>
   </body>
 </html>
