--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </div>
 
     <!--Draws Robot-->
-    <script src="robotDraw.js">
-    </script>
+    <script src="robotDraw.js"/>
 
     <!--CSV Reader-->
     <script>
