--- a/index.html
+++ b/index.html
@@ -19,26 +19,9 @@
     <script src="robotDraw.js"/>
 
     <!--CSV Reader-->
-    <script>
-      function previewFile() {
-        const content = document.querySelector(".content");
-        const [file] = document.querySelector("input[type=file]").files;
-        const reader = new FileReader();
-
-        reader.addEventListener(
-          "load",
-          () => {
-            // this will then display a text file
-            content.innerText = reader.result;
-          },
-          false,
-        );
-
-        if (file) {
-          reader.readAsText(file);
-        }
-      }
-    </script>
+    <script src="csvReader.js"/>
+     
+    
 
     <!--Collapsible-->
     <script>
