--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </div>
 
     <!--Draws Robot-->
-    <script src="robotDraw.js"/>
+    <script src="robotDraw.js" /> </script>
 
     <!--CSV Reader-->
-    <script src="csvReader.js"/>
+    <script src="csvReader.js" /> </script>
      
     
 
