--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     </canvas>
 
     <input type="file" onchange="previewFile()" /><br />
-    <button type="button" class="collapsible">Open CSV</button>
-    <div class="content">
-      <p class="content"></p>
-    </div>
+    <div class="scrollable" id="content"></div>
 
     <!--Draws Robot-->
     <script src="robotDraw.js" /> </script>
