--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       Your browser does not support the HTML canvas tag.
     </canvas>
 
-    <input type="file" onchange="previewFile()" /><br />
+    <input type="file" onchange="previewFile()" accept=".csv" /><br />
     <div class="scrollable" id="content"></div>
 
     <!--Draws Robot-->
