--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="scrollable" id="content"></div>
 
     <!--Draws Robot-->
-    <script src="robotDraw.js" /> </script>
+    <script src="robotDraw.js"> </script>
 
     <!--CSV Reader-->
-    <script src="csvReader.js" /> </script>
+    <script src="csvReader.js"> </script>
      
     
 
