--- a/index.html
+++ b/index.html
@@ -21,22 +21,7 @@
     
 
     <!--Collapsible-->
-    <script>
-      var coll = document.getElementsByClassName("collapsible");
-      var i;
-
-      for (i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function () {
-          this.classList.toggle("active");
-          var content = this.nextElementSibling;
-          if (content.style.display === "block") {
-            content.style.display = "none";
-          } else {
-            content.style.display = "block";
-          }
-        });
-      }
-    </script>
+    <script> scr="collapsible.js"</script>
       <!--moves the canvas-->
       <script type="text/javascript">
 
