--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 
     <!--Collapsible-->
-    <script> scr="collapsible.js"</script>
+    <script scr="collapsible.js"> </script>
       <!--moves the canvas-->
       <script type="text/javascript">
 
