--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@
     <!--Collapsible-->
     <script scr="javascript/collapsible.js"> </script>
     
-      <!--moves the canvas-->
-      <script type="text/javascript">
-
-        var main = document.getElementById("myCanvas");
-        var render = main.getContext("2d");
-        main.style.left = "400px";
-        main.style.top = "100px";
-        main.style.position = "absolute";
-    </script>
+    <!--moves the canvas-->
+    <script scr="javascript/canvasMove.js"> </script>
   </body>
 </html>
