--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <script scr="javascript/collapsible.js"> </script>
     
     <!--moves the canvas-->
-    <script scr="javascript/canvasMove.js"> </script>
+    <script scr="javascript/moveCanvas.js"> </script>
   </body>
 </html>
